compiler/testData/diagnostics/tests/modifiers/primaryConstructorMissingBrackets.fir.kt
class A private constructor<!SYNTAX!><!> {
}
